# praeda

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FFI.md  README.md  cloot_rust.sln  release-plz.toml
.cargo/: config.toml
.githooks/: README.md  commit-msg  pre-commit
.github/: FUNDING.yml
.github/workflows/: release-plz.yml  release.yml  rust.yml
bindings/: PraedaGenerator.cs
bindings/praeda-godot/: Cargo.toml
bindings/praeda-godot/src/: lib.rs
examples/: loot_generator.rs  test_data.toml
examples/cpp/: CMakeLists.txt  README.md  praeda.hpp  test_praeda.cpp
examples/csharp/: PraedaGenerator.cs  PraedaTest.cs  PraedaTest.csproj  README.md
examples/godot/: README.md  main.tscn  praeda.gdextension  praeda.gdextension.uid  project.godot  test_praeda.gd  test_praeda.gd.uid
include/: praeda.hpp
scripts/: coverage.sh  setup-hooks.sh
src/: error.rs  ffi.rs  generator.rs  lib.rs  models.rs
tests/: ffi_struct_test.rs  ffi_test.rs  integration_test.rs
