[workspace]
members = ["bindings/praeda-godot"]
default-members = [".", "bindings/praeda-godot"]

[package]
name = "praeda"
version = "0.2.1"
edition = "2024"
license = "LGPL-3.0-or-later"
description = "A procedural loot generator library with C++ and C# FFI bindings"
authors = ["Eddie Dover <ed@eddiedover.dev>"]
repository = "https://github.com/EddieDover/praeda"
documentation = "https://docs.rs/praeda"
homepage = "https://github.com/EddieDover/praeda"
readme = "README.md"
keywords = ["loot", "procedural", "generation", "game", "items"]
categories = ["game-development", "no-std"]
exclude = ["bindings", "examples", "scripts"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
rand = "0.9"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
